--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ ul {
 li {
   padding: 0 25px;
   font-size: 22px;
+  text-decoration: underline;
 }
 li:hover {
   cursor: pointer;
@@ -66,7 +67,7 @@ img {
   border-radius: 50%;
 }
 .background {
-  background-color: white;
+  background-color: black;
   padding: 5px 5px 0 5px;
   border-radius: 50%;
 }
