--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 img {
   width: 250px;
@@ -70,4 +70,18 @@ img {
   background-color: black;
   padding: 5px 5px 0 5px;
   border-radius: 50%;
+}
+.me-section h1 {
+  text-align: center;
+  padding-top: 95px;
+}
+.input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  flex-direction: column;
+}
+.label {
+  padding-bottom: 20px;
 }
